--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --mode production"
   },
   "keywords": [],
-  "author": "Vladilen Minin <vladilen.minin@gmail.com>",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.4.2",
